--- a/schedule/weekone/index.qmd
+++ b/schedule/weekone/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: Making a Security Synapse 
-description: "Can I Make Conceptual Connections in Computer Security?"
+description: "Can I Make Connections in Computer Security?"
 date: 2024-08-26
 layout: full
 toc: true
