fix: Add an extra phrase to the content in index.qmd.

--- a/index.qmd
+++ b/index.qmd
@@ -94,8 +94,8 @@ encryption algorithm to encrypt a JSON file. The output of this code is the
 encrypted file that can only be decrypted using the same symmetric key. Notably,
 this output was produced by automatically running the `encrypt_file` function
 when this site was deployed! If you check the [course slides](slides/index.qmd)
-you can see many other Python source code segments --- including ones that you
-can edit and run yourself!
+you can see many other Python source code segments --- including some that you
+can edit and run yourself through an IDE embedded in the slide!
 
 ## Recent Slide Decks
 
