--- a/index.qmd
+++ b/index.qmd
@@ -58,6 +58,11 @@ want to make a security synapse. These slides present an overview of high-level
 concepts and provide both more detailed explanations and implementations in
 various programming languages.
 
+- The [course projects](projects/index.qmd) page furnishes descriptions of each
+two-week project that learners complete to ensure that they have suitable
+hands-on practice to make a security synapse and achieve the learning objectives
+for the course.
+
 ## Connecting Concepts to Code
 
 Do you wonder how to practically apply the concepts you are learning about,
