--- a/schedule/weekfour/index.qmd
+++ b/schedule/weekfour/index.qmd
@@ -34,7 +34,7 @@ Success](https://web.njit.edu/~rt494/security/)
 ## Slides
 
 ```{=html}
-<iframe class="slide-deck" src="../../slides/weekthree/"></iframe>
+<iframe class="slide-deck" src="../../slides/weekfour/"></iframe>
 ```
 
 {{< iconify majesticons presentation-play size=18px >}} Full Screen: [Week Four: Cryptography](../../slides/weekfour/)
