feat: Add a recap about transposition encryption in slides/weekfour/index.qmd.

--- a/slides/weekfour/index.qmd
+++ b/slides/weekfour/index.qmd
@@ -241,6 +241,25 @@ main()
 
 :::
 
+## Recapping Transposition Encryption
+
+::: incremental
+
+- **Key Insight**: key space depends on the message's length
+- **Important Reminder**: focuses on columnar transposition
+
+:::
+
+::: {.fragment .fade .boxed-content style="margin-top: -0.25em; font-size: 0.85em;"}
+
+- **Review Questions**:
+    - What does it mean if it works in a "columnar" fashion?
+    - Is this more difficult to break than the Caesar cipher?
+    - How does this connect to the encryption technique?
+    - What are the functions inside of this algorithm?
+    - What is the purpose of the `|` character in the output?
+
+:::
 
 ## Wrapping Up on Encryption
 
