feat: Add the decryption of the transposition cipher and polish comments in slides/weekfour/index.qmd.

--- a/slides/weekfour/index.qmd
+++ b/slides/weekfour/index.qmd
@@ -219,17 +219,17 @@ def main():
 
 def encryptMessage(key, message):
     ciphertext = [''] * key
-    # Loop through each column in ciphertext:
+    # loop through each column in ciphertext:
     for column in range(key):
         currentIndex = column
-        # Keep looping until currentIndex goes past the message length:
+        # keep looping until currentIndex goes past the message length:
         while currentIndex < len(message):
-            # Place the character at currentIndex in message at the
-            # end of the current column in the ciphertext list:
+            # place the character at currentIndex in message at the
+            # end of the current column in the ciphertext list
             ciphertext[column] += message[currentIndex]
-            # Move currentIndex over:
+            # move currentIndex over
             currentIndex += key
-    # Convert the ciphertext list into a single string value and return it:
+    # convert the ciphertext list into a single string value and return it:
     return ''.join(ciphertext)
 
 main()
@@ -258,6 +258,51 @@ main()
     - How does this connect to the encryption technique?
     - What are the functions inside of this algorithm?
     - What is the purpose of the `|` character in the output?
+
+:::
+
+## Transposition Cipher Decryption
+
+```{pyodide}
+#| autorun: true
+#| max-lines: 15
+# Transposition Cipher Decryption
+# https://www.nostarch.com/crackingcodes/ (BSD Licensed)
+import math
+def main():
+    myMessage = 'Cenoonommstmme oo snnio. s s c'
+    myKey = 8
+    plaintext = decryptMessage(myKey, myMessage)
+    print(plaintext + '|')
+
+def decryptMessage(key, message):
+    numOfColumns = int(math.ceil(len(message) / float(key)))
+    numOfRows = key
+    # The number of "shaded boxes" in the last "column" of the grid:
+    numOfShadedBoxes = (numOfColumns * numOfRows) - len(message)
+    # Each string in plaintext represents a column in the grid:
+    plaintext = [''] * numOfColumns
+    # The column and row variables point to where in the grid the next
+    # character in the encrypted message will go:
+    column = 0
+    row = 0
+    for symbol in message:
+        plaintext[column] += symbol
+        column += 1 # Point to the next column.
+        # If there are no more columns OR we're at a shaded box, go back
+        # to the first column and the next row:
+        if (column == numOfColumns) or (column == numOfColumns - 1 and
+            row >= numOfRows - numOfShadedBoxes):
+            column = 0
+            row += 1
+    return ''.join(plaintext)
+
+main()
+```
+
+::: {.fragment .fade style="margin-top: 0.00em; font-size: 0.9em;"}
+
+- **Task**: Try different values for `current_message` and `current_key`
 
 :::
 
