--- a/slides/weekfour/index.qmd
+++ b/slides/weekfour/index.qmd
@@ -318,9 +318,9 @@ main()
 
 :::
 
-## How to Test a Cipher?
+# How to Test a Cipher?
 
-::: incremental
+::: {.incremental style="margin-top: -0.5em;"}
 
 - Test the Transposition Cipher to ensure its correctness!
 - Generate random messages, encrypt, and then decrypt
@@ -331,12 +331,106 @@ main()
 
 :::
 
-::: {.fragment .fade .boxed-content style="margin-top: 0.1em; font-size: 0.85em;"}
+::: {.fragment .fade .boxed-content style="margin-top: -0.1em; font-size: 0.80em;"}
 
 **Key Questions**: How can we implement this for the transposition cipher? What
 amount of testing is sufficient to confirm correctness?
 
 :::
+
+## Transposition Cipher Testing
+
+::: fragment
+
+<!-- ### Standard Approach -->
+<div style="margin-bottom: -10px;"><b>Standard Approach</b></div>
+
+```{mermaid}
+%%| echo: false
+flowchart LR
+  A(Plain Text) --> B[Encryption Algorithm]
+  B --> C(Cipher Text)
+  C --> D[Decryption Algorithm]
+  D --> E(Plain Text)
+  style A fill:#fff,color:#1c1c1c,stroke:#1c1c1c,stroke-width:2px
+  style B fill:#fff,color:#1c1c1c,stroke:#1c1c1c,stroke-width:2px
+  style C fill:#fff,color:#1c1c1c,stroke:#1c1c1c,stroke-width:2px
+  style D fill:#fff,color:#1c1c1c,stroke:#1c1c1c,stroke-width:2px
+  style E fill:#fff,color:#1c1c1c,stroke:#1c1c1c,stroke-width:2px
+  linkStyle 0,1,2,3 stroke:#1c1c1c,color:#1c1c1c
+```
+
+:::
+
+::: fragment
+
+<div style="margin-bottom: -10px; margin-top: 0.5em;"><b>Iterative Approach</b></div>
+
+```{mermaid}
+%%| echo: false
+flowchart LR
+  B[Start] --> A[Generate Random Message] --> C[Encrypt Message]
+  C --> D[Decrypt Message]
+  D --> E{Random == Decrypted?}
+  E -->|Yes| F[Test Passed]
+  E -->|No| G[Test Failed]
+  F --> H[End]
+  G --> H
+  H -->|Repeat| B
+  style A fill:#fff,color:#1c1c1c,stroke:#1c1c1c,stroke-width:2px
+  style B fill:#fff,color:#1c1c1c,stroke:#1c1c1c,stroke-width:2px
+  style C fill:#fff,color:#1c1c1c,stroke:#1c1c1c,stroke-width:2px
+  style D fill:#fff,color:#1c1c1c,stroke:#1c1c1c,stroke-width:2px
+  style E fill:#fff,color:#1c1c1c,stroke:#1c1c1c,stroke-width:2px
+  style F fill:#fff,color:#1c1c1c,stroke:#1c1c1c,stroke-width:2px
+  style G fill:#fff,color:#1c1c1c,stroke:#1c1c1c,stroke-width:2px
+  style H fill:#fff,color:#1c1c1c,stroke:#1c1c1c,stroke-width:2px
+  linkStyle 0,1,2,3,4,5,6,7,8 stroke:#1c1c1c,color:#1c1c1c
+```
+
+:::
+
+::: {.fragment .fade style="margin-top: 0.1em; font-size: 0.825em;"}
+
+Repeatedly generate random messages, checking cipher output each round!
+Continue testing process until you have established confidence in the cipher
+
+:::
+
+## Testing the Transposition Cipher
+
+```{pyodide}
+#| autorun: true
+#| max-lines: 10
+# Transposition Cipher Test
+# https://www.nostarch.com/crackingcodes/ (BSD Licensed)
+import random, sys
+def main():
+    random.seed(42)
+    for i in range(10):
+        # generate random messages to test;
+        # the message will have a random length
+        message = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ' * random.randint(4, 40)
+        # convert the message string to a list to shuffle it:
+        message = list(message)
+        random.shuffle(message)
+        message = ''.join(message) # Convert the list back to a string.
+        print('Test #%s: "%s..."' % (i + 1, message[:50]))
+        # check all possible keys for each message:
+        for key in range(1, int(len(message)/2)):
+            encrypted = encryptMessage(key, message)
+            decrypted = decryptMessage(key, encrypted)
+            # if the decryption doesn't match the original message, display
+            # an error message and quit to highlight the problematic input
+            if message != decrypted:
+                print('Mismatch with key %s and message %s.' % (key, message))
+                print('Decrypted as: ' + decrypted)
+                sys.exit()
+    print('Transposition cipher test passed.')
+
+main()
+```
+
 
 ## Testing the Transposition Cipher
 
