--- a/slides/weekfour/index.qmd
+++ b/slides/weekfour/index.qmd
@@ -320,7 +320,7 @@ main()
 
 # How to Test a Cipher?
 
-::: {.incremental style="margin-top: -0.5em;"}
+::: {.incremental style="margin-top: -0.75em;"}
 
 - Test the Transposition Cipher to ensure its correctness!
 - Generate random messages, encrypt, and then decrypt
@@ -342,7 +342,6 @@ amount of testing is sufficient to confirm correctness?
 
 ::: fragment
 
-<!-- ### Standard Approach -->
 <div style="margin-bottom: -10px;"><b>Standard Approach</b></div>
 
 ```{mermaid}
@@ -393,7 +392,7 @@ flowchart LR
 ::: {.fragment .fade style="margin-top: 0.1em; font-size: 0.825em;"}
 
 Repeatedly generate random messages, checking cipher output each round!
-Continue testing process until you have established confidence in the cipher
+Continue testing process until you have established confidence in the cipher.
 
 :::
 
@@ -401,7 +400,7 @@ Continue testing process until you have established confidence in the cipher
 
 ```{pyodide}
 #| autorun: true
-#| max-lines: 10
+#| max-lines: 9
 # Transposition Cipher Test
 # https://www.nostarch.com/crackingcodes/ (BSD Licensed)
 import random, sys
