--- a/slides/weekfour/index.qmd
+++ b/slides/weekfour/index.qmd
@@ -392,7 +392,7 @@ flowchart LR
 ::: {.fragment .fade style="margin-top: 0.1em; font-size: 0.825em;"}
 
 Repeatedly generate random messages, checking cipher output each round!
-Continue testing process until you have established confidence in the cipher.
+Continue testing until you have established confidence in the cipher.
 
 :::
 
@@ -429,6 +429,66 @@ def main():
 
 main()
 ```
+
+## Revisiting the Fernet Cipher
+
+```{python}
+from cryptography.fernet import Fernet
+
+def encrypt_string(input_string: str, key: str):
+    """Encrypt a string using a symmetric key."""
+    # convert the string into bytes
+    data_bytes = input_string.encode()
+    # create a Fernet object
+    fernet = Fernet(key)
+    # encrypt and return the data
+    encrypted_data = fernet.encrypt(data_bytes)
+    return encrypted_data
+
+def decrypt_string(encrypted_data: bytes, key: str):
+    """Decrypt data using a symmetric key."""
+    # create a Fernet object
+    fernet = Fernet(key)
+    # decrypt and return the data
+    decrypted_data = fernet.decrypt(encrypted_data)
+    return decrypted_data.decode()
+```
+
+## Testing Function for Fernet Cipher
+
+```{python}
+from cryptography.fernet import Fernet
+import random, string
+
+def test_encryption_decryption(message):
+    """Test the encryption and decryption of a message."""
+    # generate a symmetric key
+    key = Fernet.generate_key()
+    # encrypt the string
+    encrypted_data = encrypt_string(message, key)
+    # decrypt the data
+    decrypted_data = decrypt_string(encrypted_data, key)
+    # check if the decrypted data matches the original message
+    assert decrypted_data == message, 'Decryption does not match original message'
+
+def generate_random_string(length):
+    """Generate a random string of letters."""
+    letters = string.ascii_letters
+    return ''.join(random.choice(letters) for i in range(length))
+```
+
+## Running Tests for Fernet Cipher
+
+```{python}
+i = 0
+while i < 14:
+    length = random.randint(10, 50)
+    message = generate_random_string(length)
+    test_encryption_decryption(message)
+    print(f"Test: {message}, Status: Test passed.")
+    i += 1
+```
+
 
 ## Wrapping Up on Basic Cryptography
 
